# LaunchKIT

./: .gitignore  DOCS_INDEX.md  DOCUMENTATION.md  Dockerfile  PROJECT_SUMMARY.md  README.md  main.py  pyproject.toml  requirements.txt  test.py  test_install.py  web.py
launchkit/: cli.py  user_utils.py
launchkit/core/: git_tools.py  templates.py
launchkit/modules/: addon_management.py  git_module.py  project_management.py  server_management.py
launchkit/nlp/: main.py
launchkit/tests/: test_arg.py
launchkit/utils/: display_utils.py  enum_utils.py  interactive_docker_k8s.py  json_validator.py  learner_utils.py  learning_mode.py  platform_utils.py  que.py  scaffold_utils.py  security_utils.py  stack_utils.py  support_utils.py  user_utils.py
