[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "launchkit"
version = "0.1.0"
description = "LaunchKIT - Automate project setup and DevOps tasks"
authors = [
    { name = "Harshit Singla" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "questionary",
    "names",
    "pygithub",
    "docker",
    "tk",
    "jinja2",
    "pytest",
    "rich",
]

[project.scripts]
launchkit = "launchkit.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["launchkit"]
