[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "launchkit"
version = "0.1.0"
description = "LaunchKIT - Automate project setup and DevOps tasks"
authors = [
    { name = "Harshit Singla" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "questionary>=1.10.0",
    "names>=0.3.0",
    "pygithub>=1.55",
    "docker>=5.0.0",
    "jinja2>=3.0.0",
    "pytest>=7.0.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
launchkit = "launchkit.cli:main"

[tool.setuptools]
include-package-data = true
packages = ["launchkit"]
